@@ -1,8 +1,10 @@
 package com.example.todo.controller;
 
 import com.example.todo.api.controller.TaskController;
+import com.example.todo.api.dto.requestDto.TaskFilterRequest;
 import com.example.todo.api.dto.requestDto.TaskRequestDto;
 import com.example.todo.api.dto.responseDto.TaskResponseDto;
+import com.example.todo.api.dto.responseDto.TaskStatsDto;
 import com.example.todo.exception.InvalidStatusTransitionException;
 import com.example.todo.exception.ResourceNotFoundException;
 import com.example.todo.exception.TaskAlreadyCompletedException;
@@ -14,12 +16,14 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.data.jpa.mapping.JpaMetamodelMappingContext;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -77,14 +81,17 @@ public class TaskControllerTest {
                 .andExpect(jsonPath("$.title").value("Test task"))
                 .andExpect(jsonPath("$.status").value("NEW"));
     }
-    
+
     @Test
+    
     void GET_getAllTasks_shouldReturnAllTasks() throws Exception {
-        when(taskService.findAll()).thenReturn(Arrays.asList(responseDto));
+        Page<TaskResponseDto> page = new PageImpl<>(List.of(responseDto));
+        when(taskService.findAll(any(TaskFilterRequest.class), any(Pageable.class)))
+                .thenReturn(page);
 
         mockMvc.perform(get("/api/tasks"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(1));
+                .andExpect(jsonPath("$.content").isArray());
     }
     
     @Test
@@ -127,7 +134,7 @@ public class TaskControllerTest {
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.status").value(404))
                 .andExpect(jsonPath("$.message").exists())
-                .andExpect(jsonPath("$.timestamp").exists());
+                .andExpect(jsonPath("$.time").exists());
     }
     
     @Test
@@ -179,4 +186,100 @@ public class TaskControllerTest {
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.status").value(400));
     }
+
+    @Test
+    void GET_getAllTasks_shouldReturnPagedResult() throws Exception {
+        Page<TaskResponseDto> page = new PageImpl<>(List.of(responseDto));
+        when(taskService.findAll(any(TaskFilterRequest.class), any(Pageable.class)))
+                .thenReturn(page);
+
+        mockMvc.perform(get("/api/tasks")
+                        .param("page", "0")
+                        .param("size", "10")
+                        .param("sort", "createdAt,desc"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.content").isArray())
+                .andExpect(jsonPath("$.content.length()").value(1))
+                .andExpect(jsonPath("$.totalElements").value(1));
+    }
+
+    @Test
+    void GET_getAllTasks_shouldFilterByStatus() throws Exception {
+        Page<TaskResponseDto> page = new PageImpl<>(List.of(responseDto));
+        when(taskService.findAll(any(TaskFilterRequest.class), any(Pageable.class)))
+                .thenReturn(page);
+
+        mockMvc.perform(get("/api/tasks")
+                        .param("status", "NEW"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.content[0].status").value("NEW"));
+    }
+
+    @Test
+    void GET_getAllTasks_shouldFilterByTitleKeyword() throws Exception {
+        Page<TaskResponseDto> page = new PageImpl<>(List.of(responseDto));
+        when(taskService.findAll(any(TaskFilterRequest.class), any(Pageable.class)))
+                .thenReturn(page);
+
+        mockMvc.perform(get("/api/tasks")
+                        .param("keyword", "Test"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.content[0].title").value("Test task"));
+    }
+
+    @Test
+    void PATCH_updateStatus_shouldReturn200() throws Exception {
+        when(taskService.updateStatus(eq(taskId), eq(TaskStatus.IN_PROGRESS)))
+                .thenReturn(responseDto);
+
+        mockMvc.perform(patch("/api/tasks/{id}/status", taskId)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{\"status\": \"IN_PROGRESS\"}"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("NEW"));
+    }
+    
+    @Test
+    void PATCH_updateStatus_shouldReturn400_whenStatusisNull() throws Exception {
+        mockMvc.perform(patch("/api/tasks/{id}/status", taskId)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"status\": null}"))
+                .andExpect(status().isBadRequest());
+    }
+    
+    @Test
+    void PATCH_updateStatus_shouldReturn409_whenTaskAlreadyDone() throws Exception {
+        when(taskService.updateStatus(eq(taskId), any(TaskStatus.class)))
+                .thenThrow(new TaskAlreadyCompletedException(taskId));
+        
+        mockMvc.perform(patch("/api/tasks/{id}/status", taskId)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"status\": \"IN_PROGRESS\"}"))
+                .andExpect(status().isConflict());
+    }
+    
+    @Test
+    void PATCH_updateStatus_shouldReturn422_whenTransitionInvalid() throws Exception {
+        when(taskService.updateStatus(eq(taskId), any()))
+                .thenThrow(new InvalidStatusTransitionException(TaskStatus.DONE, TaskStatus.NEW));
+        
+        mockMvc.perform(patch("/api/tasks/{id}/status", taskId)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"status\": \"NEW\"}"))
+                .andExpect(status().isUnprocessableEntity());
+    }
+    
+    
+    @Test
+    void GET_stats_shouldReturn200_withStatistics() throws Exception {
+        TaskStatsDto stats = new TaskStatsDto(10, 3, 5, 2);
+        when(taskService.getStats()).thenReturn(stats);
+        
+        mockMvc.perform(get("/api/tasks/stats"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.total").value(10))
+                .andExpect(jsonPath("$.newCount").value(3))
+                .andExpect(jsonPath("$.inProgressCount").value(5))
+                .andExpect(jsonPath("$.doneCount").value(2));
+    } 
 }
